Setup read from Snowflake for temp testing

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -135,33 +135,69 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "21bf7aa9-8bc7-4b6a-88ba-2af96241e45d",
+     "nuid": "ec49b0fa-9847-4195-98c4-912fbf0d0c8f",
      "showTitle": false,
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "# options =  {\n",
-    "#     \"date_types\": [\n",
-    "#         \"accident_date\",\n",
-    "#         \"policy_date\",\n",
-    "#         \"treaty_date\",\n",
-    "#         \"report_date\"\n",
-    "#     ],\n",
-    "#     \"time_intervals\":[\n",
-    "#         \"monthly\",\n",
-    "#         \"quarterly\",\n",
-    "#         \"yearly\"\n",
-    "#     ],\n",
-    "#     \"loss_types\":[\n",
-    "#         \"total_paid\",\n",
-    "#         \"total_incurred\",\n",
-    "#         \"total_alae\",\n",
-    "#         \"total_loss\"\n",
-    "#     ],\n",
-    "#     \"export_data\":\"raw\"\n",
-    "# }"
+    "def read_snowflake(\n",
+    "    table, USER: str = \"mskonberg@fortegra.com\", PASSWORD: str = \"njMees2023!\"\n",
+    "):\n",
+    "    df = (\n",
+    "        spark.read.format(\"snowflake\")\n",
+    "        .option(\"dbtable\", table)\n",
+    "        .option(\"sfUrl\", \"fortegra_data.east-us-2.azure.snowflakecomputing.com\")\n",
+    "        .option(\"sfUser\", USER)\n",
+    "        .option(\"sfPassword\", PASSWORD)\n",
+    "        .option(\"sfDatabase\", \"DS_SPECIALTY_DEV\")\n",
+    "        .option(\"sfSchema\", \"WAREHOUSE\")\n",
+    "        .load()\n",
+    "    ).toPandas()\n",
+    "    df.columns = [col.lower() for col in df.columns]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a5865d18-c1db-4db6-969d-d7caf301f66c",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def clean_column_names(input_col_names):\n",
+    "    \"\"\"\n",
+    "    Function general purpose: convert read in column names to a standardized form\n",
+    "\n",
+    "    * input_col_names: input column name list\n",
+    "    * cleaned_col_names: output (post-cleaning) column name list\n",
+    "\n",
+    "    Cleaning steps include stripping away leading/trailing white space, converting to lower case, replacing gaps between phrases with an underscore, replacing forward slashes with an unverscore and removing a slew of special characters.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cleaned_col_names = (\n",
+    "        input_col_names.str.strip()\n",
+    "        .str.lower()\n",
+    "        .str.replace(\" \", \"_\", regex=True)\n",
+    "        .str.replace(\"/\", \"_\", regex=True)\n",
+    "        .str.replace(\"[(,),.,*,&,#,?]\", \"\", regex=True)\n",
+    "        .str.replace(\"[\", \"\", regex=True)\n",
+    "        .str.replace(\"]\", \"\", regex=True)\n",
+    "    )\n",
+    "\n",
+    "    return cleaned_col_names"
    ]
   },
   {
@@ -181,21 +217,54 @@
    },
    "outputs": [],
    "source": [
-    "book = \"AVT\"\n",
+    "book = \"King\"\n",
     "\n",
     "if book == \"King\":\n",
     "    claims_location = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
-    "    full_claims_df = load_data(claims_location).rename(\n",
-    "        columns={\n",
-    "            \"OS_loss\": \"OS_Loss\",\n",
+    "    # full_claims_df = load_data(claims_location).rename(\n",
+    "    #     columns={\n",
+    "    #         \"OS_loss\": \"OS_Loss\",\n",
+    "    #     }\n",
+    "    # )\n",
+    "\n",
+    "    ##############################################################\n",
+    "    claims_txns = read_snowflake(\"CLAIMS_TXNS\")\n",
+    "    claims_txns.columns = clean_column_names(claims_txns.columns.copy())\n",
+    "\n",
+    "    full_claims_df = claims_txns.loc[\n",
+    "        (\n",
+    "            (claims_txns[\"program\"] == \"kmh\")\n",
+    "            & (claims_txns[\"property_or_liability\"] == \"property\")\n",
+    "            # & (claims_txns[\"claim_status\"] == \"open\")\n",
+    "        )\n",
+    "    ]\n",
+    "    column_mapping = {\n",
+    "        \"accident_date\": \"Acc_Date\",\n",
+    "        \"accounting_date\": \"Accounting_Date\",\n",
+    "        \"claim_number\": \"claim_nbr\",\n",
+    "        \"paid_loss\": \"Paid_Loss\",\n",
+    "        \"paid_alae\": \"Paid_ALE\",\n",
+    "        \"os_loss\": \"OS_Loss\",\n",
+    "        \"os_alae\": \"OS_ALE\",\n",
+    "    }\n",
+    "    full_claims_df = full_claims_df.rename(columns=column_mapping)\n",
+    "\n",
+    "    full_claims_df = full_claims_df.astype(\n",
+    "        {\n",
+    "            \"Paid_Loss\": \"float\",\n",
+    "            \"Paid_ALE\": \"float\",\n",
+    "            \"OS_Loss\": \"float\",\n",
+    "            \"OS_ALE\": \"float\",\n",
     "        }\n",
     "    )\n",
+    "    ##############################################################\n",
+    "\n",
     "    x_axis_date_field = \"Accounting_Date\"\n",
-    "    y_axis_date_field = \"Acc_Date\"\n",
+    "    y_axis_date_field = \"report_date\"\n",
     "    claim_number_column = \"claim_nbr\"\n",
     "    loss_columns = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
     "    target_loss_metric = \"Total_Paid\"\n",
-    "    time_interval = \"quarterly\"  # quarterly, monthly, yearly\n",
+    "    time_interval = \"monthly\"  # quarterly, monthly, yearly\n",
     "elif book == \"Park\":\n",
     "    claims_location = \"/dbfs/FileStore/ID/kp_book_10_05_23.xlsx\"\n",
     "    full_claims_df = load_data(claims_location).rename(\n",
@@ -234,6 +303,26 @@
     "    loss_columns = [\"Paid_Loss\", \"Paid_ALE\", \"OS_Loss\", \"OS_ALE\"]\n",
     "    target_loss_metric = \"Total_Paid\"\n",
     "    time_interval = \"monthly\"  # quarterly, monthly, yearly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8a9b1b1b-8210-4fd1-acd8-f263d9796e68",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "full_claims_df.display()"
    ]
   },
   {
