Added READSNOWFLAKE functionality

--- a/Loss Development Triangle Automation.ipynb
+++ b/Loss Development Triangle Automation.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d4b10c94-1882-48bf-8300-871b5ed52655",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "source": [
+    "# Deprecated Loss Triangle Automation Script\n",
+    "### This can be used for testing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -218,46 +234,46 @@
    "outputs": [],
    "source": [
     "book = \"King\"\n",
+    "READ_SNOWFLAKE = True\n",
     "\n",
     "if book == \"King\":\n",
     "    claims_location = \"/dbfs/FileStore/ID/kmh_book_10_04_23.xlsx\"\n",
-    "    # full_claims_df = load_data(claims_location).rename(\n",
-    "    #     columns={\n",
-    "    #         \"OS_loss\": \"OS_Loss\",\n",
-    "    #     }\n",
-    "    # )\n",
-    "\n",
-    "    ##############################################################\n",
-    "    claims_txns = read_snowflake(\"CLAIMS_TXNS\")\n",
-    "    claims_txns.columns = clean_column_names(claims_txns.columns.copy())\n",
-    "\n",
-    "    full_claims_df = claims_txns.loc[\n",
-    "        (\n",
-    "            (claims_txns[\"program\"] == \"kmh\")\n",
-    "            & (claims_txns[\"property_or_liability\"] == \"property\")\n",
-    "            # & (claims_txns[\"claim_status\"] == \"open\")\n",
+    "    if not READ_SNOWFLAKE:\n",
+    "        full_claims_df = load_data(claims_location).rename(\n",
+    "            columns={\n",
+    "                \"OS_loss\": \"OS_Loss\",\n",
+    "            }\n",
     "        )\n",
-    "    ]\n",
-    "    column_mapping = {\n",
-    "        \"accident_date\": \"Acc_Date\",\n",
-    "        \"accounting_date\": \"Accounting_Date\",\n",
-    "        \"claim_number\": \"claim_nbr\",\n",
-    "        \"paid_loss\": \"Paid_Loss\",\n",
-    "        \"paid_alae\": \"Paid_ALE\",\n",
-    "        \"os_loss\": \"OS_Loss\",\n",
-    "        \"os_alae\": \"OS_ALE\",\n",
-    "    }\n",
-    "    full_claims_df = full_claims_df.rename(columns=column_mapping)\n",
+    "    elif READ_SNOWFLAKE:\n",
+    "        claims_txns = read_snowflake(\"CLAIMS_TXNS\")\n",
+    "        claims_txns.columns = clean_column_names(claims_txns.columns.copy())\n",
     "\n",
-    "    full_claims_df = full_claims_df.astype(\n",
-    "        {\n",
-    "            \"Paid_Loss\": \"float\",\n",
-    "            \"Paid_ALE\": \"float\",\n",
-    "            \"OS_Loss\": \"float\",\n",
-    "            \"OS_ALE\": \"float\",\n",
+    "        full_claims_df = claims_txns.loc[\n",
+    "            (\n",
+    "                (claims_txns[\"program\"] == \"kmh\")\n",
+    "                & (claims_txns[\"property_or_liability\"] == \"property\")\n",
+    "                # & (claims_txns[\"claim_status\"] == \"open\")\n",
+    "            )\n",
+    "        ]\n",
+    "        column_mapping = {\n",
+    "            \"accident_date\": \"Acc_Date\",\n",
+    "            \"accounting_date\": \"Accounting_Date\",\n",
+    "            \"claim_number\": \"claim_nbr\",\n",
+    "            \"paid_loss\": \"Paid_Loss\",\n",
+    "            \"paid_alae\": \"Paid_ALE\",\n",
+    "            \"os_loss\": \"OS_Loss\",\n",
+    "            \"os_alae\": \"OS_ALE\",\n",
     "        }\n",
-    "    )\n",
-    "    ##############################################################\n",
+    "        full_claims_df = full_claims_df.rename(columns=column_mapping)\n",
+    "\n",
+    "        full_claims_df = full_claims_df.astype(\n",
+    "            {\n",
+    "                \"Paid_Loss\": \"float\",\n",
+    "                \"Paid_ALE\": \"float\",\n",
+    "                \"OS_Loss\": \"float\",\n",
+    "                \"OS_ALE\": \"float\",\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "    x_axis_date_field = \"Accounting_Date\"\n",
     "    y_axis_date_field = \"report_date\"\n",
